--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Sheet yo</title>
   </head>
   <body>
-    <script type="text/javascript" src="dist/sheet.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="dist/sheet.js"></script>
   </body>
 </html>
