simple mapping transform

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <title>Sheet yo</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   </head>
   <body>
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="dist/sheet.js"></script>
   </body>
 </html>
