--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>Sheet</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="vendor/jquery.handsontable.full.css">
+    <link rel="stylesheet" href="stylesheets/main.css">
+	<link rel="stylesheet" href="vendor/jquery.handsontable.full.css">
   </head>
   <body>
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
