--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.7.1/coffee-script.min.js"></script>
     <script src="vendor/jquery.handsontable.full.js"></script>
     <script src="dist/standalone.js"></script>
   </body>
