add spreadsheet input / output preview

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <title>Sheet</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="stylesheets/main.css">
-	<link rel="stylesheet" href="vendor/jquery.handsontable.full.css">
+	<link rel="stylesheet" href="vendor/handsontable.full.css">
   </head>
   <body>
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.7.1/coffee-script.min.js"></script>
-    <script src="vendor/jquery.handsontable.full.js"></script>
+    <script src="vendor/handsontable.full.js"></script>
     <script src="dist/standalone.js"></script>
   </body>
 </html>
