support loading data from JSON/CSV file or user input

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.7.1/coffee-script.min.js"></script>
     <script src="vendor/handsontable.full.js"></script>
+    <script src="vendor/papaparse.js"></script>
     <script src="dist/standalone.js"></script>
   </body>
 </html>
